--- a/i2clcd-alt.html
+++ b/i2clcd-alt.html
@@ -33,7 +33,7 @@
 
 <script type="text/javascript">
     RED.nodes.registerType('i2clcd-alt',{
-        category: 'output',
+        category: 'i2c',
         color: "#2C75FF",
         defaults: {
             name: {value:"i2clcd-alt"},
